--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <H1>Francis</H1>
     <h2>Frontend Simplified</h2>
     <p>You most login</p>
+    <P>This all you mean to know on Frontend Simplified</P>
     <p>Lorem <i>Lorem</i> ipsum dolor, sit amet consectetur adipisicing elit. Molestiae alias, enim fuga facere corrupti cupiditate maiores porro rerum vitae eveniet, debitis velit perspiciatis natus. Alias ipsam eius error repellendus at!</p>
     <p>Frontend Simplified</p>
     <button>123</button>
